syntax = "proto3";

package user;

message UserRequest {
  // [Authorize::Admin && Authorize::User]
  optional string token =1;
  optional string nickname = 2;
  optional string name = 3;
  optional string phone_number = 4;
  optional string password = 5;
  optional string address = 6;
  // optional string community = 6;
  // [Authorize::Admin]
  optional string is_important = 7;
  optional string avatar = 8;
  optional string permission = 9;
}

// [Authorize::User]
message User {
  // [Authorize::Admin && Authorize::User]
  optional string token = 1;
  optional string nickname = 2;
  optional string name = 3;
  optional string phone_number = 4;
  optional string address = 5;
  // optional string community = 6;
  // [Authorize::Admin]
  optional string is_important = 7;
  optional string avatar = 8;
  optional string permission = 9;
}

message UserResponse {
  optional User user = 1;
  int32 code = 2;
  string message = 3;
}

// ApplyPermission - 权限申请相关
message ApplyPermission {
  string code = 1;
  int32 apply_type = 2;
  int64 expire_time = 3;
}

message ApplyPermissionResponse {
  optional ApplyPermission apply_permission = 1;
  int32 code = 2;
  string message = 3;
}

// AdminManager - 管理员管理相关
message AdminManagedUser {
  optional string open_id = 1;
  optional string nickname = 2;
  optional string name = 3;
  optional string phone_number = 4;
  optional string address = 5;
  optional string is_important = 6;
  optional string avatar = 7;
  optional string permission = 8;
}

message AdminManagerResponse {
  repeated AdminManagedUser users = 1;
  int32 code = 2;
  string message = 3;
}

// PasswordLogin - 密码登录相关
message PasswordLoginRequest {
  string phone_number = 1;
  string password = 2;
}

message PasswordLoginResponse {
  optional User user = 1;
  int32 code = 2;
  string message = 3;
}

// ChangePassword - 修改密码相关
message ChangePasswordRequest {
  string password = 1; // 新密码（明文）
}

message ChangePasswordResponse {
  int32 code = 1;
  string message = 2;
}
